# regex-cpp-parser

./: CMakeLists.txt  README.md  ast.hpp  character_classes.hpp  fast_finite_automata.hpp  finite_automata.hpp  main.cpp  test.cpp  tokenizer.hpp  util.hpp  Курсач. Отчет.docx
different_languages_benchmarks/go/: benchmark_test.go
different_languages_benchmarks/python/: benchmark.py
